--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %}
 {% block title %}Edit User{% endblock %}
 {% block body %}
-<h1>Edit User</h1>
-<form method="post">
-	{{ generate_fields(form) }}
-	<input type="submit" class="btn btn-success" value="Save">
-</form>
+<div class="container">
+	<div class="row">
+        <div class="col-md-12">
+					<h1>Edit User</h1>
+					<form method="post">
+						{{ generate_fields(form) }}
+						<input type="submit" class="btn btn-success" value="Save">
+					</form>
+				</div>
+			</div>
+		</div>
 {% endblock %}
