--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
 {% block title %}Login{% endblock %}
 {% block body %}
-<h1>Login</h1>
-<form action="{{ url_for('login') }}" method="post">
-	{{ generate_fields(form) }}
-	<input type="submit" class="btn btn-success" value="Login">
-</form>
-<a href="{{url_for('register')}}"> Register Here!</a>
+<div class="container">
+	<div class="row">
+        <div class="col-md-12">
+				<h1>Login</h1>
+				<form action="{{ url_for('login') }}" method="post">
+					{{ generate_fields(form) }}
+					<input type="submit" class="btn btn-success" value="Login">
+				</form>
+				<a href="{{url_for('register')}}"> Register Here!</a>
+			</div>
+		</div>
+	</div>
 {% endblock %}
