--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,16 @@
 {% extends 'base.html' %}
 {% block title %}Register{% endblock %}
 {% block body %}
-<h1>Register</h1>
-<form action="{{ url_for('register') }}" method="post">
-	{{ generate_fields(form) }}
-	<input type="submit" class="btn btn-success" value="Register">
-</form>
-<a href="{{url_for('login')}}"> Login Here!</a>
+<div class="container">
+	<div class="row">
+        <div class="col-md-12">
+					<h1>Register</h1>
+					<form action="{{ url_for('register') }}" method="post">
+						{{ generate_fields(form) }}
+						<input type="submit" class="btn btn-success" value="Register">
+					</form>
+					<a href="{{url_for('login')}}"> Login Here!</a>
+				</div>
+			</div>
+		</div>
 {% endblock %}
